--- a/tests/testFilters/testFilters.html
+++ b/tests/testFilters/testFilters.html
@@ -12,7 +12,9 @@
 	obj => {
 	    instance = obj.instance;
         console.log(instance);
-        instance.exports.imgproc_init(8, 1, 3)
+        //instance.exports.imgproc_init(8, 1, 3)
+        //instance.exports.imgProc_init(8, 1, 3)
+        instance.exports.imgProc_gray2(8, 1, 3)
 	}
     ).catch(e => console.log(e));
     </script>
