--- a/tests/testFilters/testFilters.html
+++ b/tests/testFilters/testFilters.html
@@ -33,12 +33,12 @@
 
                 // We need to prepare "allocate" some memory to store 6 bytes
                 const mallocU8 = instance.exports.malloc_u8(6);
-                // We get the addres (vigil Pointer) of this allocated memory
+                // We get the addres (virgil Pointer) of this allocated memory
                 console.log(mallocU8);
 
                 // Now we are ready to set some values in the memory.
                 // Note that we instantiate the Uint8Array with the buffer from the WebAssembly memory and the memory offset from mallocU8.
-                // Very important!!! size defined in malloc_u8(6) need match here : 6 +1 +1
+                // Very important!!! Size defined in malloc_u8(6) need match here : 6 * 1 * 1
                 const offset_invertData = new Uint8Array(instance.exports.memory.buffer, mallocU8, 6 * 1 * 1);
                 offset_invertData.set([8, 120, 220, 0, 12, 200])
                 // This will print an Uint8Array with these values: [8, 120, 220, 0, 12, 200]
