A simple grayscale example

--- a/tests/testFilters/invert.html
+++ b/tests/testFilters/invert.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Invert example</title>
+    <title>Invert example with Virgil code to WASM</title>
 </head>
 <body>
     <canvas id='canvas' width='640' height='480'></canvas>
     <canvas id="canvas_invert"  width='640' height='480'></canvas>
-    <img src="chalk.jpg" id="image" width="640" height="480">
+    <img src="chalk.jpg" style="display:none" id="image" width="640" height="480">
     <script src="init.js"></script>
     <script>
         var instance;
